--- a/style.css
+++ b/style.css
@@ -1,2 +1,28 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+@font-face {
+  font-family: "League-Spartan";
+  src: url("./assets/font/");
+}
+:root {
+  --darkgray: hsl(0, 0%, 63%);
+  --black: hsl(0, 0%, 0%);
+  --white: hsl(0, 0%, 100%);
+  --verydarkgray: hsl(0, 0%, 27%);
+}
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "League-Spartan", sans-serif;
+}
+body {
+  font-size: 0.75rem;
+}
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
