--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   font-family: "League-Spartan";
   src: url("./assets/font/static/Outfit-Regular.ttf") format(truetype);
 }
+@font-face {
+  font-family: "League-Spartan-Bold";
+  src: url("./assets/font/static/Outfit-ExtraBold.ttf") format(truetype);
+}
 :root {
   --darkgray: hsl(0, 0%, 63%);
   --black: hsl(0, 0%, 0%);
@@ -59,11 +63,20 @@ header section p {
 }
 header section div {
   align-items: center;
+  padding: 0.5rem 0;
   gap: 1rem;
+}
+a {
+  text-decoration: none;
+  color: var(--black);
 }
 h5 {
   text-transform: uppercase;
   letter-spacing: 0.35em;
+  color: var(--black);
+  font-family: "League-Spartan-Bold";
+  font-weight: 900;
+  font-size: 0.9rem;
 }
 span h5 {
   margin: 0 0 1rem 0;
@@ -71,7 +84,7 @@ span h5 {
 nav {
   align-items: center;
   gap: 2.65rem;
-  padding: 2rem;
+  padding: 4rem 0 0 4rem;
   overflow: hidden;
   position: relative;
 }
@@ -102,6 +115,10 @@ nav {
 .change,
 li {
   cursor: pointer;
+  position: relative;
+}
+li:hover {
+  color: var(--white);
 }
 .sideBar {
   background-color: white;
